<resources>
    <string name="app_name">Transportes de Zaragoza</string>

    <string name="icono">icono</string>
    <string name="aceptar">Aceptar</string>

    <string name="tv_mainTitle">Transporte Urbano Zaragoza</string>
    <string name="btn_bici">Bicicleta</string>
    <string name="btn_tranvia">Tranvía</string>
    <string name="btn_bus">Bus</string>
    <string name="btn_Datos">Datos</string>
    <string name="btn_Casa">Casa</string>

    <string name="idBici">id bici</string>
    <string name="tituloBici">titulo bici</string>
    <string name="pBicisDisponiblesBici2_tv">Bicis disponibles:</string>
    <string name="bicisDisponiblesBici2_tv">numero bicis disponibles</string>
    <string name="pAnclajesDisponiblesBici2_tv">Anclajes disponibles:</string>
    <string name="anclajesDisponiblesBici2_tv">numero anclajes disponibles</string>

    <string name="idTranvia">id tranvia</string>
    <string name="tituloTranvia">titulo tranvia</string>
    <string name="destinoTranvia1">destino tranvia 1</string>
    <string name="destinoTranvia2">destino tranvia 2</string>
    <string name="minutosTranvia1">minutos tranvia 1</string>
    <string name="minutosTranvia2">minutos tranvia 2</string>

    <string name="idPoste">id poste</string>
    <string name="tituloPoste">titulo poste</string>
    <string name="lineaPoste">linea</string>
    <string name="destinoLinea">destino</string>
    <string name="minutosBus1">minutos bus 1</string>
    <string name="minutosBus2">minutos bus 2</string>


</resources>